--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Shashi Gowda—Home Page
             I'm a programmer at <a href="https://juliacomputing.com">Julia Computing</a>. I previously worked for the <a href="http://julia.mit.edu/">The Julia Lab</a>. My interests are broadly in making scientific computing easy and effective by building tools for parallelism, visualization and data analysis. <div class="u-vskip"></div>I'm currently working most on <a href="http://juliadb.org">JuliaDB</a>.
         </div>
         <div class="u-cols-3">
-            <img src="/assets/img/nyc.jpg" style="height:200px; width: auto;">
+            <img src="/assets/img/nyc.jpg" title="in my favorite city!" style="height:200px; width: auto;">
         </div>
     </div>
 
