--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@ title: Shashi Gowda—Home Page
     <div class="u-hbox">
         <div class="u-cols-5">
     <div class="u-vskip"></div>
-            I'm a programmer at <a href="https://juliacomputing.com">Julia Computing</a>. I previously worked for the <a href="http://julia.mit.edu/">The Julia Lab</a>. My interests are broadly in making scientific computing easy and effective by building tools for parallelism, visualization and data analysis. <div class="u-vskip"></div>I'm currently working most on <a href="http://juliadb.org">JuliaDB</a>.
+            I'm a grad student in Computational Science at MIT. I previously worked at <a href="https://juliacomputing.com">Julia Computing</a>. My interests are broadly in making scientific computing easy and effective by building tools for visualization and data analysis.
         </div>
         <div class="u-cols-3">
-            <img src="/assets/img/nyc.jpg" title="in my favorite city!" style="height:200px; width: auto;">
+            <img src="/assets/img/nyc.jpg" title="in my second favorite city!" style="height:200px; width: auto;">
         </div>
     </div>
 
   <div class="u-container">
     <h2 class="u-title-small text-gray-2">Projects</h2>
     <div class="u-vskip"></div>
-    <div class="u-hbox"><div class="u-hskip"></div>Here are some Julia packages I have worked on or am working on.</div>
+    <div class="u-hbox"><div class="u-hskip"></div>Here are some projects I have worked on.</div>
     <div class="u-vskip"></div>
     <div class="u-hbox">
         {% include project.html
@@ -32,17 +32,17 @@ title: Shashi Gowda—Home Page
         %}
 
         {% include project.html
+        title="WebIO"
+        desc="Low level tools for web widgets"
+        github="https://github.com/JuliaGizmos/WebIO.jl"
+        %}
+
+        {% include project.html
         title="TextParse"
         desc="Fast just-in-time generated CSV parser for Julia."
         webtype="Website"
         url="https://juliacomputing.com/TextParse.jl/latest"
         github="https://github.com/JuliaComputing/TextParse.jl"
-        %}
-
-        {% include project.html
-        title="WebIO"
-        desc="Low level tools for web widgets"
-        github="https://github.com/JuliaGizmos/WebIO.jl"
         %}
 
         {% include project.html
