--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Shashi Gowda—Home Page
     <div class="u-hbox">
         <div class="u-cols-5">
     <div class="u-vskip"></div>
-            I'm a grad student in Computational Science at MIT. I previously worked at <a href="https://juliacomputing.com">Julia Computing</a>. My interests are broadly in making scientific computing easy and effective by building tools for visualization and data analysis.
+            I'm a grad student in Computational Science at MIT. I previously worked at <a href="https://juliacomputing.com">Julia Computing</a>. My interests are broadly in making scientific computing easy and effective by building tools for interactive visualization and data analysis.
         </div>
         <div class="u-cols-3">
             <img src="/assets/img/nyc.jpg" title="in my second favorite city!" style="height:200px; width: auto;">
